<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_1"
    tools:context=".LoginActivity">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="348dp"
        android:rotation="33"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/background_gradient"
        app:srcCompat="@drawable/ell" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="380dp"
        android:rotation="218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/background_gradient"
        app:srcCompat="@drawable/ell" />

    <TextView
        android:id="@+id/login_layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="63dp"
        android:fontFamily="@font/acme_regular"
        android:text="@string/app_name"
        android:textColor="#103D78"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/login_layout_title"
        app:layout_constraintTop_toBottomOf="@+id/login_layout_title" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_form_tl_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:helperText="Required"
        app:helperTextEnabled="false"
        app:counterMaxLength="10"
        app:counterEnabled="true"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:id="@+id/login_form_phone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:maxLength="10"
            android:background="@drawable/field_input_background"
            android:paddingHorizontal="15dp"
            android:hint="@string/phone"
            android:inputType="numberSigned" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/login_form_submit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="Login"
        android:background="@drawable/login_button_bg"
        app:layout_constraintEnd_toEndOf="@+id/login_form_tl_phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_form_tl_phone"
        app:layout_constraintTop_toBottomOf="@+id/login_form_tl_phone" />
</androidx.constraintlayout.widget.ConstraintLayout>