<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_bg_1"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="63dp"
        android:fontFamily="@font/acme_regular"
        android:text="@string/app_name"
        android:textColor="#103D78"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--button to register our new user-->

    <TextView
        android:id="@+id/signup_instruct_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/signup_instruct_text"
        app:layout_constraintEnd_toEndOf="@+id/register_tl_name"
        app:layout_constraintStart_toStartOf="@+id/register_tl_name"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_tl_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:counterMaxLength="15"
        app:counterEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_instruct_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_form_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/name"
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_tl_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_tl_name"
        app:layout_constraintEnd_toEndOf="@+id/register_tl_name"
        app:layout_constraintStart_toStartOf="@+id/register_tl_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_form_phone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:hint="Phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_tl_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_tl_phone"
        app:layout_constraintStart_toStartOf="@id/register_tl_phone"
        app:layout_constraintEnd_toEndOf="@id/register_tl_phone">

        <AutoCompleteTextView
            android:id="@+id/register_form_add"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Address"
            app:layout_constraintEnd_toEndOf="@+id/register_tl_phone"
            app:layout_constraintStart_toStartOf="@+id/register_tl_phone"
            app:layout_constraintTop_toBottomOf="@+id/register_tl_phone" />
    </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
    android:id="@+id/register_tl_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/register_tl_address"
    app:layout_constraintEnd_toEndOf="@+id/register_tl_address"
    app:layout_constraintStart_toStartOf="@+id/register_tl_address">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_form_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:autofillHints="phone"
        android:inputType="textPassword"
        android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
        android:hint="Password"/>
</com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
    android:id="@+id/register_tl_confirm"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/register_tl_password"
    app:layout_constraintEnd_toEndOf="@+id/register_tl_password"
    app:layout_constraintStart_toStartOf="@+id/register_tl_password">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_form_confirm"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:inputType="textPassword"
        android:hint="Confirm"/>
</com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_submit"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/signup_button_bg"
        android:text="Sign Up"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/register_tl_address"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/register_tl_address"
        app:layout_constraintTop_toBottomOf="@+id/register_tl_confirm" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/register_submit"
        app:layout_constraintStart_toStartOf="@+id/register_submit"
        app:layout_constraintTop_toBottomOf="@+id/register_submit">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Already have an account?"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/register_form_confirm"
            app:layout_constraintTop_toBottomOf="@+id/register_submit" />

        <TextView
            android:id="@+id/signup_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="Click here"
            android:textColor="#103C78"
            android:textSize="12sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>